# de-tgbot

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
doc/: alembic-migrations.md  yandexgpt_light.md
src/: bot.py
src/common/: db.py  settings.py
src/llm/: yagpt.py
src/migrations/: env.py
src/migrations/versions/: 84422e9e35c1_initial.py
src/models/: base.py  public.py
src/tg/: service.py
